exports[`test ProgressBar leeching 1`] = `
<div
  className="progressBar leeching">
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={50}
    role="progressbar"
    style={
      Object {
        "width": "50%",
      }
    } />
</div>
`;

exports[`test ProgressBar magnet 1`] = `
<div
  className="progressBar magnet">
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={50}
    role="progressbar"
    style={
      Object {
        "width": "50%",
      }
    } />
</div>
`;

exports[`test ProgressBar paused 1`] = `
<div
  className="progressBar paused">
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={50}
    role="progressbar"
    style={
      Object {
        "width": "50%",
      }
    } />
</div>
`;

exports[`test ProgressBar seeding 1`] = `
<div
  className="progressBar seeding">
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={50}
    role="progressbar"
    style={
      Object {
        "width": "50%",
      }
    } />
</div>
`;
